# cpp_hw1

./: CMakeLists.txt
src/: big_number.cpp  big_number.h  main.cpp
src/big_number/: CMakeLists.txt  big_number.cpp  big_number.h  common.h
src/big_number/operations/: compare.cpp  div.cpp  mul.cpp  operations.h  sub.cpp  sum.cpp  trim.cpp
src/big_number/tests/: CMakeLists.txt  test_big_number.cpp
src/expression_evaluator/: CMakeLists.txt  common.h  evaluator.cpp  evaluator.h  operators.cpp  operators.h  tokens.h  tokens_parser.cpp  tokens_parser.h
src/expression_evaluator/tests/: CMakeLists.txt  test_expression_evaluator.cpp
src/tests/: test_big_number.cpp
